--- a/package.json
+++ b/package.json
@@ -41,10 +41,13 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "@types/morgan": "^1.9.3",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "morgan": "^1.10.0",
+    "winston": "^3.7.2"
   }
 }
